# ITMO-university

./: README.md
coding-theory/lab1/: main.cpp
cpp-course/8_puzzle/: board.cpp  board.hpp  solver.cpp  solver.hpp  solver_test.cpp
cpp-course/autocomplete/: autocomplete.cpp  autocomplete.hpp  autocomplete_test.cpp  binary_search_deluxe.cpp  binary_search_deluxe.hpp  term.cpp  term.hpp
cpp-course/randomized_queue_and_deque/: randomized_deque.hpp  randomized_deque_test.cpp  randomized_queue.hpp  randomized_queue_test.cpp  subset.cpp
dbms/hw10/: 1.1.sql  1.2.sql  1.3.sql  1.5.sql  1.6.sql  1.7.sql  1.8.sql  2.0.sql  2.1.sql  2.2.sql  2.3.sql
dbms/hw4/: ddl.sql  dml.sql  hw4.txt
dbms/hw5/: 1.1.sql  1.2.sql  10.sql  2.1.ra  2.1.sql  2.2.ra  2.2.sql  3.1.ra  3.1.sql  3.2.ra  3.2.sql  3.3.ra  3.3.sql  3.4.ra  3.4.sql  3.5.ra  3.5.sql  3.6.ra  3.6.sql  4.1.ra  4.1.sql  4.2.ra  4.2.sql  5.1.ra  5.1.sql  5.2.ra  5.2.sql  5.3.ra  5.3.sql  6.1.ra  6.1.sql  6.2.ra  6.2.sql  6.3.ra  6.3.sql  6.4.ra  6.4.sql  7.1.ra  7.1.sql  7.2.ra  (+8 more)
dbms/hw6/: 1.1.dl  1.1.sql  1.2.dl  1.2.sql  1.3.dl  1.3.sql  1.4.dl  1.4.sql  2.1.dl  2.1.sql  2.2.dl  2.2.sql  2.3.dl  2.3.sql  2.4.dl  2.4.sql  2.5.dl  2.5.sql  3.1.dl  3.1.sql  3.2.dl  3.2.sql  4.1.dl  4.1.sql  4.2.dl  4.2.sql  4.3.dl  4.3.sql  5.1.dl  5.1.sql  5.2.dl  5.2.sql  5.3.dl  5.3.sql  5.4.dl  5.4.sql  6.1.dl  6.1.sql  6.2.dl  6.2.sql  (+1 more)
dbms/hw7/: 1.1.sql  1.2.sql  1.3.sql  1.4.sql  1.5.sql  1.6.sql  1.7.sql  1.8.sql  2.1.sql  2.2.sql  2.3.sql  2.4.sql  2.5.sql  3.1.sql  3.2.sql  3.3.sql  3.4.sql  3.5.sql  3.6.sql  3.7.sql  3.8.sql  4.1.sql  4.2.sql  4.3.sql  4.4.sql  5.1.sql  5.2.sql  5.3.sql  5.4.sql  6.1.sql  6.2.sql  6.3.sql
dbms/hw8/: avg_mark.sql  avg_mark_index.sql  courses_index.sql  groups_index.sql  lecturers_index.sql  marks_index.sql  new_queries.sql  plan_index.sql  students_index.sql
dbms/hw9/: 1.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  answer.txt  ddl.sql  dml.sql
dbms/test/: 1.1.ra  1.1.sql  1.2.ra  1.2.sql  1.3.ra  1.3.sql  1.4.ra  1.4.sql  1.5.ra  1.5.sql  1.6.ra  1.6.sql  1.7.ra  1.7.sql  1.8.ra  1.8.sql  2.1.sql  2.2.dl  2.2.sql  2.3.dl  2.3.sql  2.4.sql  2.6.dl  3.1.sql  3.2.sql  3.3.sql  3.4.sql  3.5.sql  4.1.sql  4.2.sql
functional-programming/: stack.yaml
functional-programming/hw1/: hw1.cabal
functional-programming/hw1/src/: Block1Task1.hs  Block1Task2.hs  Block1Task3.hs  Block2Task2.hs  Block3Task1.hs  Block3Task2.hs
functional-programming/hw1/test/: Block1Task1Test.hs  Block1Task2Test.hs  Block1Task3Test.hs  Block2Task1Test.hs  Block2Task2Test.hs  Block3Task1Test.hs  Block3Task2Test.hs  Test.hs
functional-programming/hw2/: hw2.cabal
functional-programming/hw2/src/Block1/: Task1.hs  Task2.hs  Task3.hs
functional-programming/hw2/src/Block2/: Task1.hs  Task2.hs
functional-programming/hw2/src/Block3/: Task1.hs  Task2.hs  Task3.hs
functional-programming/hw2/test/: Test.hs
functional-programming/hw2/test/Block1/: Task1Test.hs
functional-programming/hw2/test/Block2/: Task1Test.hs  Task2Test.hs
functional-programming/hw2/test/Block3/: Task2Test.hs  Task3Test.hs
functional-programming/hw3/: hw3.cabal
functional-programming/hw4/: hw4.cabal
functional-programming/hw4/app/: Main.hs
functional-programming/hw4/benchmark/: GeometryBenchmark.hs  IntegralBenchmark.hs  Main.hs
functional-programming/hw4/src/: Comonad19.hs  ConcurrentHashTable.hs  FileSystem.hs  Geometry.hs  Grid.hs  Integral.hs
functional-programming/hw4/test/: CHTTests.hs  FileSystemTests.hs  Test.hs
java-advanced/scripts/: HW1.cmd  HW10-client.cmd  HW10-server.cmd  HW12-client.cmd  HW12-server.cmd  HW2.cmd  HW3.cmd  HW4.cmd  HW5-6.cmd  HW7.cmd  HW8.cmd  HW9.cmd
javascript-course/: HW1.js  HW2.js  HW2test.js  HW3.js  HW4.js  HW5.js  HW5test.js
javascript-course/HW7/: index.css  index.html  index.js
javascript-course/weather/: .editorconfig  .gitignore  package-lock.json
layout-course/exam/: index.css  index.html
machine-learning/CF/: A.cpp  B.cpp  C.cpp  D.cpp  F.cpp  L.cpp  M.cpp  N.cpp  O.cpp  P.cpp  Q.cpp
machine-learning/labs/: .gitignore
math-logic/A/: Lexer.x  Main.hs  Makefile  Syntax.y
math-logic/B/: Lexer.x  Main.hs  Makefile  Syntax.y
math-logic/D/: Deduction.hs  Lexer.hs  Main.hs  Makefile  MinProof.hs  Proofs.hs  Syntax.hs
operation-systems/HW1/: script1.sh  script2.sh  script3.sh  script4.sh  script5.sh  script6.sh  test.sh
operation-systems/HW2/: defense.sh  emails.sh  script.sh
operation-systems/HW3/: 1.sh  4.sh  5.sh  6.sh  script.sh
operation-systems/HW4/: 1.sh  3.sh  vision.sh
operation-systems/HW5/: backup  rmtrash  untrash  upback
operation-systems/HW6/: 1.txt  2.txt  3.txt  4.txt  compare.bat  copy.bat  services.bat
optimization-methods/: lab1.ipynb  lab2.ipynb
parallel-programming/possible-executions-analysis/: solution.txt
pardigms-of-programming/10 kombinator parser/: combinators.clj  expression.clj  object.clj
pardigms-of-programming/4 Functional expressions JS/: functionalExpression.js  запуск тестов.txt
pardigms-of-programming/5 Object expressions JS/: objectExpression.js  запуск тестов.txt
pardigms-of-programming/6 Expressions with exceptions JS/: objectExpression.js
pardigms-of-programming/7 Linear algebra Clj/: linear.clj
pardigms-of-programming/8 Expression clj/: expression.clj
pardigms-of-programming/9 Object expression clj/: expression.clj
programming-intro/01-sum/: Sum.java
programming-intro/01.1-sum-BigInteger/: SumBigInteger.java
programming-intro/02.1-reverseTranspose/: ReverseTranspose.java
programming-intro/03-sumHexFile/: SumHexFile.java
programming-intro/04-wordStatWords/: WordStatWords.java
programming-intro/04.1-WordStatInput/: WordStatInput.java
programming-intro/05-reverse(Fast Scanner)/: Reverse.java
programming-intro/05.1-reverseMin(Fast Scanner)/: ReverseMin.java
programming-intro/05.2-reverseSum(FastScanner)/: ReverseSum.java
programming-intro/06-wordStatLineIndex/: FastScanner.java  WordStatLineIndex.java
(+673 files in other folders)
