name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Azat Karimov
maintainer:          azatkarimow22@gmail.com
copyright:           2020 Azat Karimov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block1Task1 
                       Block1Task2 
                       Block1Task3 
                       Block2Task2 
                       Block3Task1 
                       Block3Task2
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

test-suite hw1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , hw1
                     , hspec
                     , hedgehog
                     , tasty
                     , tasty-hunit
                     , tasty-hspec
                     , tasty-hedgehog
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N 
  default-language:    Haskell2010
  other-modules:       Block1Task1Test
                       Block1Task2Test
                       Block1Task3Test
                       Block2Task1Test
                       Block2Task2Test
                       Block3Task1Test
                       Block3Task2Test