name:                hw4
version:             0.1.0.0
synopsis:            Synopsis for task 4
description:         Task 4 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw4#readme
license:             MIT
license-file:        LICENSE
author:              Azat Karimov
maintainer:          azatkarimow22@gmail.com
copyright:           2021 Azat Karimov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Geometry
                      , Integral
                      , ConcurrentHashTable
                      , FileSystem
                      , Comonad19
                      , Grid
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                      , stm
                      , mtl
                      , microlens
                      , directory
                      , array
                      , hashable
                      , random
                      , comonad
                      , parallel
                      , vector
                      , monad-par
  default-language:    Haskell2010

executable bench
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -Werror -threaded -rtsopts -with-rtsopts=-N6
  build-depends:       base
                     , hw4
                     , criterion
  default-language:    Haskell2010
  other-modules:       GeometryBenchmark
                     , IntegralBenchmark

executable hw4
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw4
  default-language:    Haskell2010

test-suite hw4-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , hw4
                     , hspec
                     , mtl
                     , async
                     , hedgehog
                     , tasty
                     , microlens
                     , tasty-hunit
                     , tasty-hspec
                     , tasty-hedgehog
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       CHTTests
                     , FileSystemTests
